--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!doctype html>
+<html>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<meta charset="utf-8">
+<title>ben & jerry's</title>
+  <style>
+    html,body { height:100%; }
+    .column1 {
+      float: left;
+      width: 42%;
+      margin-left: 3%;
+      height: 530px;
+    }
+    .column2 {
+      float: left;
+      width: 52%;
+      margin-right: 3%;
+      height: 530px;
+    }
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
 
+  </style>
+</head>
+<body>
+<h2 style="font-family: Bookman Old Style; color: black;font-size: 60px; text-align: center">
+welcome to jen & berry's
+</h2>
+
+<div class="row">
+  <div class="column1" style="background-color: #ffe6ff">
+    <img src = "https://images.unsplash.com/photo-1536351425844-145ebdae32d8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60" style="height: 100%; width: 100%">
+  </div>
+  <div class="column2" style="background-color: #D5FFD5">
+   <!--  <h3> Responsibly-sourced, organic ice cream.</h3>
+    <h4> Good for the planet and the soul. </h4> -->
+  </div>
+</div>
+
+</body>
