--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8">
     <title>Gallery</title>
     <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            border: 0;
+            font-family: 'Asap', sans-serif;
+        }
+        
+        h1, h2, h3, h4, h5, h6 {
+            font-family: 'Flamenco', cursive;
+        }
+
         body {
             text-align: center;
             box-sizing: border-box;
