--- a/press.html
+++ b/press.html
@@ -56,6 +56,7 @@
 
   <nav id="center-menu">
     <ul>
+      <li><a style="font-weight: bold" href="index.html">HOME</a></li>
       <li><a href="events.html">EVENTS </a></li>
       <li><a href="gallery.html">GALLERY</a></li>
       <li><a href="menu.html">MENU</a></li>
