--- a/press.html
+++ b/press.html
@@ -29,7 +29,7 @@
       clear: both;
     }
     .parallax { 
-      background-image: url("https://images.unsplash.com/photo-1536351425844-145ebdae32d8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60");
+      background-image: url("https://images.unsplash.com/photo-1511559714511-3181c09c1cb0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2700&q=80");
 
       height: 100%;
       background-image: opacity: 0.2;
@@ -77,9 +77,9 @@
     press
     </h2>
 <!--     <div class="container">
-      <img id="bookclass" src="https://images.unsplash.com/photo-1501443762994-82bd5dace89a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
-    </div>
- -->
+      <img id="bookclass" src="https://images.unsplash.com/photo-1495020689067-958852a7765e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80">
+    </div> -->
+
 
   </div>
 
