--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<li><a href="menu.html">MENU</a></li>
 			<li><a href="press.html">PRESS</a></li>
 			<li><a href="ourstory.html">OUR STORY</a></li>
-			<li><a href="contactus.html">CONTACT US</a></li>
+			<li><a href="contact.html">CONTACT US</a></li>
 			<li>
 				<form>
 					<input type='text' name='search' placeholder="Find your flavor...">
