--- a/events.html
+++ b/events.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<meta charset="utf-8">
-
-<title>jen & berry's</title>
+  <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <meta charset="utf-8">
+  <title>jen & berry's</title>
+  
   <style>
     .container {
       position: relative;
@@ -84,6 +85,25 @@
 
 <body>
   <div class="parallax" >
+
+  <nav id="center-menu">
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="events.html">EVENTS </a></li>
+      <li><a href="gallery.html">GALLERY</a></li>
+      <li><a href="menu.html">MENU</a></li>
+      <li><a href="press.html">PRESS</a></li>
+      <li><a href="ourstory.html">OUR STORY</a></li>
+      <li><a href="contact.html">CONTACT US</a></li>
+      <li>
+        <form>
+          <input type='text' name='search' placeholder="Find your flavor...">
+          <input class= 'button' type='submit' value="Go!" >
+        </form>
+      </li>
+    </ul>
+  </nav>
+
     <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; background-color: #e699ff; text-align: center; opacity: 0.9">
     events
     </h2>
