--- a/menu.html
+++ b/menu.html
@@ -5,8 +5,28 @@
   <link rel="stylesheet" href="Menu-style.css">
   <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
     <body> 
+         <!--  nav bar and search button --> 
+      <nav id="center-menu">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="events.html">EVENTS </a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="menu.html">MENU</a></li>
+          <li><a href="press.html">PRESS</a></li>
+          <li><a href="ourstory.html">OUR STORY</a></li>
+          <li><a href="contact.html">CONTACT US</a></li>
+          <li>
+            <form>
+              <input type='text' name='search' placeholder="Find your flavor...">
+              <input class= 'button' type='submit' value="Go!" >
+            </form>
+          </li>
+        </ul>
+      </nav>
+  
         <h1> Our Flavors </h1>
         <div class="row">
             <div class="column"><img src="Menu-photos/pink.jpg" alt="Pink Ice Cream" class="img"></div>
