--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Gallery</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
     <style>
         html, body {
             margin: 0;
@@ -75,6 +77,25 @@
     <script language="javascript" src="gallery.js"></script>
 </head>
 <body>
+      <!--  nav bar and search button --> 
+  <nav id="center-menu">
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="events.html">EVENTS </a></li>
+      <li><a href="gallery.html">GALLERY</a></li>
+      <li><a href="menu.html">MENU</a></li>
+      <li><a href="press.html">PRESS</a></li>
+      <li><a href="ourstory.html">OUR STORY</a></li>
+      <li><a href="contact.html">CONTACT US</a></li>
+      <li>
+        <form>
+          <input type='text' name='search' placeholder="Find your flavor...">
+          <input class= 'button' type='submit' value="Go!" >
+        </form>
+      </li>
+    </ul>
+  </nav>
+
     <h1>Gallery</h1>
     <p>Click the arrows below to rotate images.</p>
     
