--- a/press.html
+++ b/press.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<meta charset="utf-8">
-
-<title>jen & berry's</title>
+  <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <meta charset="utf-8">
+  <title>jen & berry's</title>
 </head>
 
 <style>
@@ -38,25 +38,14 @@
       background-repeat: no-repeat;
       background-size: 100%;
     }
-
-    /* nav bar and search button styling*/
-    nav {background-color: #e699ff; padding: 15px 0px;}
-    nav a {color: #000; font-size: 19px; text-decoration: none;}
-    nav ul {list-style-type:none;}
-    nav ul li {display: inline-block; padding: 10px 10px 10px 50px; line-height: 2; font-family: 'Flamenco'; font-size: 12pt;}
-    .button {background-color: #000; color: #fff; display: inline-block; padding: 4px 15px; border: none;}
-  #center-menu{
-    text-align: center; 
-    vertical-align: center;
-  }
-  </style>
+</style>
 
 <body>
   <div class="parallax" >
 
   <nav id="center-menu">
     <ul>
-      <li><a style="font-weight: bold" href="index.html">HOME</a></li>
+      <li><a href="index.html">HOME</a></li>
       <li><a href="events.html">EVENTS </a></li>
       <li><a href="gallery.html">GALLERY</a></li>
       <li><a href="menu.html">MENU</a></li>
