--- a/events.html
+++ b/events.html
@@ -95,17 +95,11 @@
       <li><a href="press.html">PRESS</a></li>
       <li><a href="ourstory.html">OUR STORY</a></li>
       <li><a href="contact.html">CONTACT US</a></li>
-      <li>
-        <form>
-          <input type='text' name='search' placeholder="Find your flavor...">
-          <input class= 'button' type='submit' value="Go!" >
-        </form>
-      </li>
     </ul>
   </nav>
 
     <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; background-color: #e699ff; text-align: center; opacity: 0.9">
-    events
+    Events
     </h2>
 
     <div class="row">
