--- a/gallery.html
+++ b/gallery.html
@@ -87,16 +87,13 @@
       <li><a href="press.html">PRESS</a></li>
       <li><a href="ourstory.html">OUR STORY</a></li>
       <li><a href="contact.html">CONTACT US</a></li>
-      <li>
-        <form>
-          <input type='text' name='search' placeholder="Find your flavor...">
-          <input class= 'button' type='submit' value="Go!" >
-        </form>
-      </li>
     </ul>
   </nav>
 
-    <h1>Gallery</h1>
+    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">   
+    Gallery
+    </h2>
+
     <p>Click the arrows below to rotate images.</p>
     
     <div class="row">
