--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <meta charset="utf-8">
 
-<title>jen & berry's</title>
+  <title>Welcome to Jen & Berry's</title>
   <style>
     html,body { height:116%; }
     .column1 {
@@ -66,7 +66,7 @@
 
     <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
       
-    welcome to jen & berry's
+    Welcome to Jen & Berry's
 
     </h2>
 
