--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
 <head> 
-  <title> Menu </title>
+  <title>Jen & Berry's: Our Menu</title>
   <link rel="stylesheet" href="Menu-style.css">
   <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
@@ -18,16 +18,13 @@
           <li><a href="press.html">PRESS</a></li>
           <li><a href="ourstory.html">OUR STORY</a></li>
           <li><a href="contact.html">CONTACT US</a></li>
-          <li>
-            <form>
-              <input type='text' name='search' placeholder="Find your flavor...">
-              <input class= 'button' type='submit' value="Go!" >
-            </form>
-          </li>
         </ul>
       </nav>
   
-        <h1> Our Flavors </h1>
+    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">   
+      Our Menu
+    </h2>
+
         <div class="row">
             <div class="column"><img src="Menu-photos/pink.jpg" alt="Pink Ice Cream" class="img"></div>
             <div class="column"> <img src="Menu-photos/green.jpg" alt="Green Ice Cream" class="img"> </div>
@@ -70,7 +67,6 @@
             </div>
         </div>
 
-        <p style="text-align: center; font-size: 14px"> comegetbirds@gmail.com &nbsp;|&nbsp; (555) 555-0341 &nbsp;|&nbsp; 102 Bird Lane, Birdville, MA 02144 </p>
     </body>
 
 </html>
