--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Contact</title>
+  <title>Jen & Berry's: Contact</title>
     <style>
         html, body {
             margin: 0;
@@ -133,16 +133,13 @@
       <li><a href="press.html">PRESS</a></li>
       <li><a href="ourstory.html">OUR STORY</a></li>
       <li><a href="contact.html">CONTACT US</a></li>
-      <li>
-        <form>
-          <input type='text' name='search' placeholder="Find your flavor...">
-          <input class= 'button' type='submit' value="Go!" >
-        </form>
-      </li>
     </ul>
   </nav>
 
-    <h1>Contact</h1>
+    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">   
+    Contact Us
+    </h2>
+    
     <p>
         Contact us to book an event, order catering, or send feedback! </br>
         Use the form below to send us an email, or give us a call: </br>
