--- a/press.html
+++ b/press.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <meta charset="utf-8">
-  <title>jen & berry's</title>
+  <title>Jen & Berry's: Press</title>
 </head>
 
 <style>
@@ -52,18 +52,12 @@
       <li><a href="press.html">PRESS</a></li>
       <li><a href="ourstory.html">OUR STORY</a></li>
       <li><a href="contact.html">CONTACT US</a></li>
-      <li>
-        <form>
-          <input type='text' name='search' placeholder="Find your flavor...">
-          <input class= 'button' type='submit' value="Go!" >
-        </form>
-      </li>
     </ul>
   </nav>
 
 
     <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; background-color: #e699ff; text-align: center; opacity: 0.9">
-    press
+    Press
     </h2>
 <!--     <div class="container">
       <img id="bookclass" src="https://images.unsplash.com/photo-1495020689067-958852a7765e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80">
