--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <meta charset="utf-8">
-  <title>jen & berry's</title>
+  <title>Jen & Berry's: Events</title>
   
   <style>
     .container {
@@ -98,8 +98,10 @@
     </ul>
   </nav>
 
-    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; background-color: #e699ff; text-align: center; opacity: 0.9">
-    Events
+    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
+      
+   Events
+
     </h2>
 
     <div class="row">
