--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Gallery</title>
+  <title>Jen & Berry's: Gallery</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <style>
