--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="Menu-style.css">
   <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
 </head>
     <body> 
         <h1> Our Flavors </h1>
@@ -16,13 +17,13 @@
 
         <div class="row">
             <div class="column">
-                <p> Pink Ice Cream </p>
+                <p> STRAWBERRY </p> <br /> <hr />
             </div>
             <div class="column">
-                <p> Green Ice Cream </p>
+                <p> MINT CHOCOLATE CHIP </p> <br /> <hr />
             </div>
             <div class="column">
-                <p> Cookie Dough </p>
+                <p> CARAMEL ALMOND </p> <br /> <hr />
             </div>
         </div>
 
@@ -40,17 +41,15 @@
 
         <div class="row">
             <div class="column">
-                <p> Yellow Ice Cream </p>
+                <p> BANANA </p> <br /> <hr />
             </div>
             <div class="column">
-                <p> Purple Ice Cream </p>
+                <p> PURPLE SHERBET </p> <br /> <hr />
             </div>
             <div class="column">
-                <p> Chocolate Chip Ice Cream </p>
+                <p> DOUBLE CHOCOLATE CHIP </p> <br /> <hr />
             </div>
         </div>
-
-        <p style="text-align: center; font-size: 14px"> comegetbirds@gmail.com &nbsp;|&nbsp; (555) 555-0341 &nbsp;|&nbsp; 102 Bird Lane, Birdville, MA 02144 </p>
     </body>
 
 </html>
