--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
             margin-right: auto;
             width: 50%;
             padding: 2%;
-            background-color: #ececec;
-            border-color: #5DA2D5;
+            background-color: #FFDB9F;
+            border-color: #ffffff;
             border-radius: 5px;
             margin-bottom: 5%;
         }
@@ -75,7 +75,7 @@
         }
 
         .button_contact {
-            background-color: #5DA2D5;
+            background-color: #FFC2C8;
             width: 30%;
             padding-top: 2%;
             padding-bottom: 2%;
@@ -84,11 +84,11 @@
             font-family: 'Flamenco', cursive;
             font-size: 110%;
             font-weight: bold;
-            border-color: #000000;
+            border-color: #ffffff;
         }
 
         .button_contact:hover {
-            background-color: rgba(93, 161, 213, 0.808);
+            background-color: rgba(192, 127, 133, 0.76);
         }
 
         .label {
@@ -141,7 +141,9 @@
     
     <p>
         Contact us to book an event, order catering, or send feedback! </br>
-        Use the form below to send us an email, or give us a call: </br>
+        Use the form below to send us an email, or give us a call: 
+    </p>
+    <p style="font-weight:bold">
         33-ICE-CREAM
     </p>
 
