--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
             margin-top: 5px;
             margin-bottom: 20px;
             padding: 5px;
-            border: 1px solid #ccc;
+            border: 2px solid #FED273;
             border-radius: 4px;
             resize: none;
         }
