--- a/press.html
+++ b/press.html
@@ -38,6 +38,18 @@
       background-repeat: no-repeat;
       background-size: 100%;
     }
+
+  .spacing{
+    padding: 50px 0px 0px 0px;
+    display:inline-block;
+  }
+
+  img{
+    border-style: solid;
+    border-width: 20px;
+    border-color: black;
+  }
+
 </style>
 
 <body>
@@ -55,18 +67,27 @@
     </ul>
   </nav>
 
-
    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
-      
    Press
-
     </h2>
-<!--     <div class="container">
-      <img id="bookclass" src="https://images.unsplash.com/photo-1495020689067-958852a7765e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80">
-    </div> -->
 
+  <footer id="center-menu">
+    <ul>
+      <li><a>ADDRESS</a></li>
+      <li><a>PHONE NUMBER </a></li>
+      <li><a>SOMETHING ELSE</a></li>
+    </ul>
+  </footer>
 
   </div>
 
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript">
+  
+  // DROPDOWNS 
+
+
+</script>
 </html>
