--- a/press.html
+++ b/press.html
@@ -73,9 +73,8 @@
 
   <footer id="center-menu">
     <ul>
-      <li><a>ADDRESS</a></li>
-      <li><a>PHONE NUMBER </a></li>
-      <li><a>SOMETHING ELSE</a></li>
+      <li><a>   &copy; Copyright 2019 by nobody. All rights reserved. </a></li>
+      <li><a>Call us at 333-ICE-CREAM!</a></li>
     </ul>
   </footer>
 
