--- a/press.html
+++ b/press.html
@@ -58,16 +58,16 @@
   <nav id="center-menu">
     <ul>
       <li><a href="index.html">HOME</a></li>
+      <li><a href="menu.html">MENU</a></li>
       <li><a href="events.html">EVENTS </a></li>
       <li><a href="gallery.html">GALLERY</a></li>
-      <li><a href="menu.html">MENU</a></li>
       <li><a href="press.html">PRESS</a></li>
       <li><a href="ourstory.html">OUR STORY</a></li>
       <li><a href="contact.html">CONTACT US</a></li>
     </ul>
   </nav>
 
-   <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
+   <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
    Press
     </h2>
 
