Recent photo our story

--- a/menu.html
+++ b/menu.html
@@ -2,10 +2,77 @@
 <html> 
 <head> 
   <title>Jen & Berry's: Our Menu</title>
-  <link rel="stylesheet" href="Menu-style.css">
   <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
+
+
+  <style> 
+    body {
+        background-color: #FFC2C8;
+    }
+    h1 {
+        color: #fff;
+        font-family: 'Flamenco', cursive;
+        text-align: center;
+        font-size: 64px;
+    }
+
+    h2 {
+        color: #FC4A1A;
+        font-family: 'Flamenco', cursive;
+        font-size: 24px;
+        margin-right: 50px;
+        margin-left: 50px;
+    }
+    h4 {
+      text-align: center;
+      font-family: 'Asap', sans-serif;
+      font-size: 24px;
+      color: #fff;
+      margin-top:10px;
+    }
+    p {
+      margin: 25px;
+      font-family: 'Asap', sans-serif;
+      font-size: 16px;
+      color: #fff;
+      text-align: center;
+    }
+
+    img {
+      padding-top: 50px;
+      width: 50%;
+      height: auto;
+    }
+
+    hr {
+      width: 60%;
+      height: 2px;
+      border: none;
+      background-color: #fff;
+    }
+    .column {
+      float: left;
+      width: 33.333333%;
+      padding: 0 8px;
+    }
+
+    .row {
+      width: 100%;
+      content: "";
+      display: table;
+      clear: both;
+      text-align: center;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+</style>
+
+
+
 </head>
     <body> 
          <!--  nav bar and search button --> 
@@ -33,13 +100,13 @@
 
         <div class="row">
             <div class="column">
-                <p> STRAWBERRY </p> <br /> <hr />
+                <h4> STRAWBERRY </h4> <hr /> <p> Our classic strawberry ice cream comes all the way from our wonderful strawberry farms in California. Freshly grown, harvested, and finally mashed into a creamy delight you're sure to enjoy. </p> 
             </div>
             <div class="column">
-                <p> MINT CHOCOLATE CHIP </p> <br /> <hr />
+                <h4> MINT CHOCOLATE CHIP </h4> <hr /> <p> Our delicious mint chip ice cream uses a homemade créme de menthe to provide a refreshing, natural dessert with a tickle of chocolate just for your sweet side. </p> 
             </div>
             <div class="column">
-                <p> CARAMEL ALMOND </p> <br /> <hr />
+                <h4> CARAMEL ALMOND </h4> <hr /> <p> As one of our fan favorites, our caramel almond is sure to impress. The combination of creamy, golden caramel with a crunchy nut makes for the perfect sweet treat. </p>
             </div>
         </div>
 
@@ -57,13 +124,13 @@
 
         <div class="row">
             <div class="column">
-                <p> BANANA </p> <br /> <hr />
+                <h4> BANANA </h4> <hr /> <p> If you enjoy a healthier take on our delicious ice cream, this banana ice cream was made for you. Natural and made fresh daily, it tastes like it's right out of the peel! </p>
             </div>
             <div class="column">
-                <p> PURPLE SHERBET </p> <br /> <hr />
+                <h4> PURPLE SHERBET </h4> <hr /> <p> More of a sherbet kinda person? Boy, do we have the flavor for you! This purple sherbet combines all the best things of sherbet: the taste and the color!</p>
             </div>
             <div class="column">
-                <p> DOUBLE CHOCOLATE CHIP </p> <br /> <hr />
+                <h4> DOUBLE CHOCOLATE CHIP </h4>  <hr /> <P> Calling all the chocolate lovers! If you're in the mood for something rich and creamy with a hint of crunch, try our double chocolate chip. Even better than a glass of milk with cookies, and that's saying a lot! </P>
             </div>
         </div>
     </body>
